Fix title on mobile ?

--- a/style/style.css
+++ b/style/style.css
@@ -44,18 +44,18 @@ header {
 #title {
 	font-family: 'Space Grotesk', sans-serif;
 	color: #2e1c2b;
-	font-size: 2.4rem;
+	font-size: 50px;
 	font-weight: bold;
 }
 
 #title:hover + #line {
-    width: 270px;
+    width: 350px;
 }
 
 #line {
 	height: 1px;
     flex-shrink: 0;
-	min-width: 270px;
+	min-width: 280px;
 	width: 80%;
 	background-color: #2e1c2b;
 	border: none;
@@ -202,6 +202,14 @@ footer {
 @media screen and (max-width: 737px) {
     .album {
         max-width: 360px;
+    }
+
+    #title {
+    	font-size: 40px;
+    }
+
+    #title:hover + #line {
+        width: 280px;
     }
 }
 
